--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-﻿[B]0.0.1 | CB | 2016-09-27[/B] 
+﻿[B]1.0.0 | CB | 2017-12-30[/B] 
+Refonte complète
+
+[B]0.0.1 | CB | 2016-09-27[/B] 
 Version de travail
 
 
