--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -3,11 +3,8 @@
     <!-- GENERALITE -->
     <string id="32000">Configuration</string>
     <string id="32110">Advances settings</string>
-    <string id="32100">Apparence</string>
-    <string id="32101">Enable the addon fanart</string>
-    <string id="32102">If available, use the tv-show image as fanart</string>
-    <string id="32114">Show tv-show name in the description section</string>
-    <string id="32115">Verify network and web site connectivity</string>
+    <string id="32100">Search</string>
+	<string id="32103">Number of results on each page</string>
 
     <!-- CACHE -->
     <string id="32105">Cache</string>
