--- a/resources/language/French (Canada)/strings.xml
+++ b/resources/language/French (Canada)/strings.xml
@@ -2,13 +2,9 @@
 <strings>
     <!-- GENERALITE -->
     <string id="32000">Configuration</string>
-    <string id="32100">Apparence</string>
+    <string id="32100">Recherche</string>
     <string id="32110">Paramètres Avancés</string>
-    <string id="32101">Activer le fanart de l'addiciel</string>
-    <string id="32102">Si disponible, utiliser l'image de l'émission en fanart</string>
 	<string id="32103">Nombre d'éléments recherchés à chaque page</string>
-    <string id="32114">Afficher le nom de l'émission dans le section descriptive</string>
-    <string id="32115">Vérifiez la connectivité au réseau et du site web</string>
 
     <!-- CACHE -->
     <string id="32105">Cache</string>
