--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-﻿[B]0.0.3 | CB | 2018-01-04[/B] 
+﻿[B]0.0.4 | CB | 2018-01-05[/B] 
+Ajout des liens externes (Youtube et Vimeo)
+Identification des articles et balados (non géré)
+Ajout d'éléments visuels
+
+[B]0.0.3 | CB | 2018-01-04[/B] 
 Ajout de la fonction de Recherche, sections Vidéos, Dossiers,Séries
 Débogage et test
 
