--- a/resources/language/French (Canada)/strings.xml
+++ b/resources/language/French (Canada)/strings.xml
@@ -5,7 +5,8 @@
     <string id="32100">Recherche</string>
     <string id="32110">Paramètres Avancés</string>
 	<string id="32103">Nombre d'éléments recherchés à chaque page</string>
-
+    <string id="32101">Activer le fanart de l'addiciel</string>
+    <string id="32102">Si disponible, utiliser l'image de l'émission en fanart</string>
     <!-- CACHE -->
     <string id="32105">Cache</string>
     <string id="32106">Durée de vie des informations gardées en cache</string>
